rewrote bits of the cloth physics to be more soft